[metadata]
name = dcrpm
version = attr: dcrpm.__version__.__version__
url = https://github.com/facebookincubator/dcrpm
author = Sean Karlage
author_email = skarlage@fb.com
description = A tool to detect and correct common issues around RPM database corruption.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv2
classifiers =
  Operating System :: POSIX :: Linux
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Development Status :: 3 - Alpha
  Topic :: Utilities
  License :: OSI Approved :: GNU General Public License v2 (GPLv2)
keywords =
  bdb
  db_recover
  db4
  dcrpm
  dnf
  rpm
  yum

[options]
install_requires =
  psutil
tests_require =
  pytest
  TestSlide
  mock; python_version < "3.6"
  typing; python_version < "3.6"
packages = find:

[options.entry_points]
console_scripts =
  dcrpm = dcrpm.main:main

[options.extras_require]
release =
  twine
  wheel

[options.packages.find]
exclude =
  tests
